--- a/attention_layer_analysis/readme
+++ b/attention_layer_analysis/readme
@@ -3,3 +3,8 @@ the forward for attention in torch tutorial
 there is sth different in torch_attention and attention showed in NMT by jointly learning to align adn translate
 1. the encoder is a single rnn, not biRnn/BiLstm
 2. the input of decoder is the [SOS,target], taget is [target,EOS]
+
+
+seq.py is the analysis for attention layer
+
+seq_training.py is the whole training process
